--- a/app/css/app.css
+++ b/app/css/app.css
@@ -33,7 +33,8 @@ body {
   width: 100%;
   height: 100%;
   top: 0;
-  left: 0; }
+  left: 0;
+  overflow: hidden; }
 
 #drawing {
   position: absolute;
@@ -45,26 +46,107 @@ body {
   transition: opacity 2s;
   text-align: center;
   opacity: 0;
-  z-index: 2; }
+  z-index: 2;
+  top: 2.5%; }
   #drawing.show {
     opacity: 1; }
   #drawing img {
-    height: 90%;
-    width: auto;
-    margin-top: 2.5%; }
+    height: 95%;
+    width: auto; }
 
 #full-bar {
-  width: 90%;
-  height: 47.5%;
-  background: #b09917;
   position: absolute;
-  left: 5%;
-  top: 25%;
-  z-index: 1; }
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 95%;
+  opacity: 0;
+  -webkit-transition: opacity 2s;
+  transition: opacity 2s; }
+  #full-bar.show {
+    opacity: 1; }
+  #full-bar .bar {
+    height: 5.0625%;
+    width: 90%;
+    left: 5%;
+    background: #b09917;
+    position: absolute;
+    height: 50.625%;
+    top: 27%; }
+
+#bars {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 95%;
+  opacity: 0;
+  -webkit-transition: opacity 2s;
+  transition: opacity 2s; }
+  #bars.show {
+    opacity: 1; }
 
 .items {
-  height: 5.27778%;
+  height: 5.0625%;
   width: 90%;
+  left: 5%;
   background: #b09917;
-  margin-bottom: 1%;
-  margin-left: 5%; }
+  position: absolute;
+  -webkit-transition: top 2s;
+  transition: top 2s; }
+  .items.stop {
+    height: 2.25%; }
+
+.item-1 {
+  top: 27%; }
+  .item-1.stop {
+    top: 6.75%; }
+
+.item-2 {
+  top: 32.0625%; }
+  .item-2.stop {
+    top: 17.5%; }
+
+.item-3 {
+  top: 37.125%; }
+  .item-3.stop {
+    top: 26.75%; }
+
+.item-4 {
+  top: 42.1875%; }
+  .item-4.stop {
+    top: 34.5%; }
+
+.item-5 {
+  top: 47.25%; }
+  .item-5.stop {
+    top: 46.25%; }
+
+.item-6 {
+  top: 52.3125%; }
+  .item-6.stop {
+    top: 55.5%; }
+
+.item-7 {
+  top: 57.375%; }
+  .item-7.stop {
+    top: 66%; }
+
+.item-8 {
+  top: 62.4375%; }
+  .item-8.stop {
+    top: 76%; }
+
+.item-9 {
+  top: 67.5%; }
+  .item-9.stop {
+    top: 83.5%; }
+
+.item-10 {
+  top: 72.5625%; }
+  .item-10.stop {
+    top: 95.25%; }
